// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status Fields Component should disable fields correctly 1`] = `
<React.Fragment>
  <Panel
    sectioned={true}
  >
    <Field
      component={[Function]}
      disabled={true}
      label="Test Name"
      name="name"
    />
  </Panel>
  <Panel
    sectioned={true}
  >
    <Field
      component={[Function]}
      datePickerProps={
        Object {
          "disabledDays": Object {
            "before": 2018-05-15T12:00:00.000Z,
          },
          "fromMonth": 2018-05-15T12:00:00.000Z,
          "initialMonth": 2018-05-15T12:00:00.000Z,
          "toMonth": null,
        }
      }
      disabled={true}
      left={true}
      name="dates"
      showPresets={false}
      textFieldProps={
        Object {
          "helpText": "A test may run for a maximum of 30 days",
          "label": "When should we run this test?",
          "prefix": <AccessTime />,
        }
      }
    />
  </Panel>
</React.Fragment>
`;

exports[`Status Fields Component should render correctly 1`] = `
<React.Fragment>
  <Panel
    sectioned={true}
  >
    <Field
      component={[Function]}
      label="Test Name"
      name="name"
    />
  </Panel>
  <Panel
    sectioned={true}
  >
    <Field
      component={[Function]}
      datePickerProps={
        Object {
          "disabledDays": Object {
            "before": 2018-05-15T12:00:00.000Z,
          },
          "fromMonth": 2018-05-15T12:00:00.000Z,
          "initialMonth": 2018-05-15T12:00:00.000Z,
          "toMonth": null,
        }
      }
      left={true}
      name="dates"
      showPresets={false}
      textFieldProps={
        Object {
          "helpText": "A test may run for a maximum of 30 days",
          "label": "When should we run this test?",
          "prefix": <AccessTime />,
        }
      }
    />
  </Panel>
</React.Fragment>
`;
